k3d_cluster_yaml_files/flask-app-manifest2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: database-namespace
spec:
  replicas: 5
  selector:
    matchLabels:
      app: flask-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: imdat1/flask_app
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: database-namespace
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: flask-app
