k3d_cluster_yaml_files/northwind-pod-manifest2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: northwind-db-pod
  namespace: database-namespace
  labels:
    app: northwind
spec:
  containers:
  - name: northwind
    image: bradymholt/postgres-northwind:latest
    ports:
    - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: northwind
  namespace: database-namespace
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: northwind
