k3d_cluster_yaml_files/spring-boot-manifest2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  namespace: database-namespace
  labels:
    app: spring-boot-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: spring-boot-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: imdat1/sql_chatbot
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
  namespace: database-namespace
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: spring-boot-app
