k3d_cluster_yaml_files/ingress-manifest2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  namespace: database-namespace
  annotations:
    spec.ingressClassName: traefik
spec:
  rules:
  - host: springboot.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app
            port:
              number: 8080
